[workspace]
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details
resolver = "2"
members = [
    "packages/kos",
    "packages/kos-mobile",
    "packages/kos-web",
    "packages/kos-hardware",
    "packages/kos-codec",
]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
# lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.hardware]
inherits = "release"
opt-level = 'z'      # Optimize for size
lto = true           # Enable Link Time Optimization
panic = 'abort'      # Generally reduces size for embedded systems
codegen-units = 1    # more aggressive code merging
strip = true         # Strip symbols from the final binary

[profile.mobile]
inherits = "release"
lto = true
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"   # Abort on panic, as unwinding code does require extra binary size
rpath = true

[workspace.package]
authors = ["Klever <kos@klever.io>"]
edition = "2021"
homepage = "https://klever.org/"
license = "Apache-2.0"
repository = "https://github.com/kleverio/kos-rs"
rust-version = "1.69.0"
version = "0.2.25"

[workspace.dependencies]
bech32 = "0.9.1"
sha2 = { version = "0.10" }
sha3 = { version = "0.10" }
hmac = { version = "0.12" }
secp256k1 = { version = "0.27", features = [
    "recovery",
    "rand",
    "bitcoin_hashes",
] }
ed25519-dalek = { version = "2" }
coins-bip32 = { version = "0.8", default-features = false }
coins-bip39 = { version = "0.8", default-features = false, features = [
    "english",
] }
bytes = { version = "1.4.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
rand = "0.8"

prost = "0.11"
prost-types = "0.11"


lazy_static = "1.4.0"


reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "blocking",
    "json",
] }
wasm-bindgen = "0.2"
uniffi = { version = "0.28.1" }
enum_delegate = "0.2"
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
thiserror = "1.0"
kos-mobile = { version = "0.1.0", path = "./packages/kos-mobile", default-features = false }
ecies = { version = "0.2.7", default-features = false, features = ["pure"] }
kos = { version = "0.2.25", path = "./packages/kos", default-features = false, features = ["not-ksafe"] }

# lightning
lwk_common = "0.9.0"
lwk_signer = "0.8.0"
# lwk_wollet = { git = "https://github.com/breez/lwk", branch = "breez-sdk-liquid-0.6.3" }
lwk_wollet = "0.8.0"

